src/parser/SQLParser.js
// Generated from /home/mazinsw/Development/SQLtoClass/src/parser/SQLParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SQLParserListener = require('./SQLParserListener').SQLParserListener;
var grammarFileName = "SQLParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     "'.'", "'='", "'''", "'\"'", "'`'", "'@'", "','", "';'", 
                     "'('", "')'" ];

var symbolicNames = [ null, "BOOL", "K_DROP", "K_DATABASE", "K_SCHEMA", 
                      "K_IF", "K_EXISTS", "K_NOT", "K_DEFAULT", "K_CHARACTER", 
                      "K_SET", "K_COLLATE", "K_USE", "K_TEMPORARY", "K_TABLE", 
                      "K_RESTRICT", "K_CASCADE", "K_CONSTRAINT", "K_PRIMARY", 
                      "K_KEY", "K_INDEX", "K_UNIQUE", "K_FOREIGN", "K_COMMENT", 
                      "K_AUTO_INCREMENT", "K_NULL", "K_REFERENCES", "K_ON", 
                      "K_DELETE", "K_UPDATE", "K_ASC", "K_DESC", "K_BIT", 
                      "K_TINYINT", "K_UNSIGNED", "K_BINARY", "K_ZEROFILL", 
                      "K_SMALLINT", "K_MEDIUMINT", "K_INT", "K_INTEGER", 
                      "K_BIGINT", "K_REAL", "K_DOUBLE", "K_FLOAT", "K_DECIMAL", 
                      "K_NUMERIC", "K_BOOL", "K_BOOLEAN", "K_DATE", "K_TIME", 
                      "K_TIMESTAMP", "K_DATETIME", "K_YEAR", "K_CHAR", "K_VARCHAR", 
                      "K_VARBINARY", "K_TINYBLOB", "K_BLOB", "K_MEDIUMBLOB", 
                      "K_LONGBLOB", "K_JSON", "K_TINYTEXT", "K_TEXT", "K_MEDIUMTEXT", 
                      "K_LONGTEXT", "K_ENUM", "K_NO", "K_ACTION", "K_CREATE", 
                      "K_FALSE", "K_TRUE", "DOT", "EQ", "SINGLE_QUOTE", 
                      "DOUBLE_QUOTE", "BACK_QUOTE", "AT", "COMMA", "SEMICOLON", 
                      "LPAR", "RPAR", "ID", "NAME", "INT", "FLOAT", "STRING", 
                      "COMMENT", "SINGLE_COMMENT", "WS" ];

var ruleNames =  [ "script", "stmt", "dropSchema", "createSchema", "createSpecification", 
                   "tableComment", "setStmt", "setOption", "setDefaultValue", 
                   "useStmt", "dropTable", "dropTableName", "createTable", 
                   "tableName", "fieldList", "createDefinition", "columnName", 
                   "constraintName", "constraintTable", "columnDefinition", 
                   "autoIncrement", "columnDefaultValue", "columnNull", 
                   "columnNotNull", "fieldComment", "referenceDefinition", 
                   "referenceDeleteOption", "referenceUpdateOption", "referenceTable", 
                   "indexColName", "dataType", "stringItem", "charsetName", 
                   "collateName", "referenceOption", "defaultValue", "tableOptions", 
                   "option", "idName" ];

function SQLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SQLParser.prototype = Object.create(antlr4.Parser.prototype);
SQLParser.prototype.constructor = SQLParser;

Object.defineProperty(SQLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SQLParser.EOF = antlr4.Token.EOF;
SQLParser.BOOL = 1;
SQLParser.K_DROP = 2;
SQLParser.K_DATABASE = 3;
SQLParser.K_SCHEMA = 4;
SQLParser.K_IF = 5;
SQLParser.K_EXISTS = 6;
SQLParser.K_NOT = 7;
SQLParser.K_DEFAULT = 8;
SQLParser.K_CHARACTER = 9;
SQLParser.K_SET = 10;
SQLParser.K_COLLATE = 11;
SQLParser.K_USE = 12;
SQLParser.K_TEMPORARY = 13;
SQLParser.K_TABLE = 14;
SQLParser.K_RESTRICT = 15;
SQLParser.K_CASCADE = 16;
SQLParser.K_CONSTRAINT = 17;
SQLParser.K_PRIMARY = 18;
SQLParser.K_KEY = 19;
SQLParser.K_INDEX = 20;
SQLParser.K_UNIQUE = 21;
SQLParser.K_FOREIGN = 22;
SQLParser.K_COMMENT = 23;
SQLParser.K_AUTO_INCREMENT = 24;
SQLParser.K_NULL = 25;
SQLParser.K_REFERENCES = 26;
SQLParser.K_ON = 27;
SQLParser.K_DELETE = 28;
SQLParser.K_UPDATE = 29;
SQLParser.K_ASC = 30;
SQLParser.K_DESC = 31;
SQLParser.K_BIT = 32;
SQLParser.K_TINYINT = 33;
SQLParser.K_UNSIGNED = 34;
SQLParser.K_BINARY = 35;
SQLParser.K_ZEROFILL = 36;
SQLParser.K_SMALLINT = 37;
SQLParser.K_MEDIUMINT = 38;
SQLParser.K_INT = 39;
SQLParser.K_INTEGER = 40;
SQLParser.K_BIGINT = 41;
SQLParser.K_REAL = 42;
SQLParser.K_DOUBLE = 43;
SQLParser.K_FLOAT = 44;
SQLParser.K_DECIMAL = 45;
SQLParser.K_NUMERIC = 46;
SQLParser.K_BOOL = 47;
SQLParser.K_BOOLEAN = 48;
SQLParser.K_DATE = 49;
SQLParser.K_TIME = 50;
SQLParser.K_TIMESTAMP = 51;
SQLParser.K_DATETIME = 52;
SQLParser.K_YEAR = 53;
SQLParser.K_CHAR = 54;
SQLParser.K_VARCHAR = 55;
SQLParser.K_VARBINARY = 56;
SQLParser.K_TINYBLOB = 57;
SQLParser.K_BLOB = 58;
SQLParser.K_MEDIUMBLOB = 59;
SQLParser.K_LONGBLOB = 60;
SQLParser.K_JSON = 61;
SQLParser.K_TINYTEXT = 62;
SQLParser.K_TEXT = 63;
SQLParser.K_MEDIUMTEXT = 64;
SQLParser.K_LONGTEXT = 65;
SQLParser.K_ENUM = 66;
SQLParser.K_NO = 67;
SQLParser.K_ACTION = 68;
SQLParser.K_CREATE = 69;
SQLParser.K_FALSE = 70;
SQLParser.K_TRUE = 71;
SQLParser.DOT = 72;
SQLParser.EQ = 73;
SQLParser.SINGLE_QUOTE = 74;
SQLParser.DOUBLE_QUOTE = 75;
SQLParser.BACK_QUOTE = 76;
SQLParser.AT = 77;
SQLParser.COMMA = 78;
SQLParser.SEMICOLON = 79;
SQLParser.LPAR = 80;
SQLParser.RPAR = 81;
SQLParser.ID = 82;
SQLParser.NAME = 83;
SQLParser.INT = 84;
SQLParser.FLOAT = 85;
SQLParser.STRING = 86;
SQLParser.COMMENT = 87;
SQLParser.SINGLE_COMMENT = 88;
SQLParser.WS = 89;

SQLParser.RULE_script = 0;
SQLParser.RULE_stmt = 1;
SQLParser.RULE_dropSchema = 2;
SQLParser.RULE_createSchema = 3;
SQLParser.RULE_createSpecification = 4;
SQLParser.RULE_tableComment = 5;
SQLParser.RULE_setStmt = 6;
SQLParser.RULE_setOption = 7;
SQLParser.RULE_setDefaultValue = 8;
SQLParser.RULE_useStmt = 9;
SQLParser.RULE_dropTable = 10;
SQLParser.RULE_dropTableName = 11;
SQLParser.RULE_createTable = 12;
SQLParser.RULE_tableName = 13;
SQLParser.RULE_fieldList = 14;
SQLParser.RULE_createDefinition = 15;
SQLParser.RULE_columnName = 16;
SQLParser.RULE_constraintName = 17;
SQLParser.RULE_constraintTable = 18;
SQLParser.RULE_columnDefinition = 19;
SQLParser.RULE_autoIncrement = 20;
SQLParser.RULE_columnDefaultValue = 21;
SQLParser.RULE_columnNull = 22;
SQLParser.RULE_columnNotNull = 23;
SQLParser.RULE_fieldComment = 24;
SQLParser.RULE_referenceDefinition = 25;
SQLParser.RULE_referenceDeleteOption = 26;
SQLParser.RULE_referenceUpdateOption = 27;
SQLParser.RULE_referenceTable = 28;
SQLParser.RULE_indexColName = 29;
SQLParser.RULE_dataType = 30;
SQLParser.RULE_stringItem = 31;
SQLParser.RULE_charsetName = 32;
SQLParser.RULE_collateName = 33;
SQLParser.RULE_referenceOption = 34;
SQLParser.RULE_defaultValue = 35;
SQLParser.RULE_tableOptions = 36;
SQLParser.RULE_option = 37;
SQLParser.RULE_idName = 38;


function ScriptContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SQLParser.RULE_script;
    return this;
}

ScriptContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScriptContext.prototype.constructor = ScriptContext;

ScriptContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

ScriptContext.prototype.enterRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.enterScript(this);
	}
};

ScriptContext.prototype.exitRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.exitScript(this);
	}
};




SQLParser.ScriptContext = ScriptContext;

SQLParser.prototype.script = function() {

    var localctx = new ScriptContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SQLParser.RULE_script);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SQLParser.K_DROP) | (1 << SQLParser.K_SET) | (1 << SQLParser.K_USE))) !== 0) || _la===SQLParser.K_CREATE || _la===SQLParser.SEMICOLON) {
            this.state = 78;
            this.stmt();
            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SQLParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;

StmtContext.prototype.createSchema = function() {
    return this.getTypedRuleContext(CreateSchemaContext,0);
};

StmtContext.prototype.SEMICOLON = function() {
    return this.getToken(SQLParser.SEMICOLON, 0);
};

StmtContext.prototype.dropSchema = function() {
    return this.getTypedRuleContext(DropSchemaContext,0);
};

StmtContext.prototype.createTable = function() {
    return this.getTypedRuleContext(CreateTableContext,0);
};

StmtContext.prototype.dropTable = function() {
    return this.getTypedRuleContext(DropTableContext,0);
};

StmtContext.prototype.useStmt = function() {
    return this.getTypedRuleContext(UseStmtContext,0);
};

StmtContext.prototype.setStmt = function() {
    return this.getTypedRuleContext(SetStmtContext,0);
};

StmtContext.prototype.enterRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.enterStmt(this);
	}
};

StmtContext.prototype.exitRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.exitStmt(this);
	}
};




SQLParser.StmtContext = StmtContext;

SQLParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SQLParser.RULE_stmt);
    try {
        this.state = 103;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 84;
            this.createSchema();
            this.state = 85;
            this.match(SQLParser.SEMICOLON);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 87;
            this.dropSchema();
            this.state = 88;
            this.match(SQLParser.SEMICOLON);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 90;
            this.createTable();
            this.state = 91;
            this.match(SQLParser.SEMICOLON);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 93;
            this.dropTable();
            this.state = 94;
            this.match(SQLParser.SEMICOLON);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 96;
            this.useStmt();
            this.state = 97;
            this.match(SQLParser.SEMICOLON);
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 99;
            this.setStmt();
            this.state = 100;
            this.match(SQLParser.SEMICOLON);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 102;
            this.match(SQLParser.SEMICOLON);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DropSchemaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SQLParser.RULE_dropSchema;
    return this;
}

DropSchemaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DropSchemaContext.prototype.constructor = DropSchemaContext;

DropSchemaContext.prototype.K_DROP = function() {
    return this.getToken(SQLParser.K_DROP, 0);
};

DropSchemaContext.prototype.idName = function() {
    return this.getTypedRuleContext(IdNameContext,0);
};

DropSchemaContext.prototype.K_DATABASE = function() {
    return this.getToken(SQLParser.K_DATABASE, 0);
};

DropSchemaContext.prototype.K_SCHEMA = function() {
    return this.getToken(SQLParser.K_SCHEMA, 0);
};

DropSchemaContext.prototype.K_IF = function() {
    return this.getToken(SQLParser.K_IF, 0);
};

DropSchemaContext.prototype.K_EXISTS = function() {
    return this.getToken(SQLParser.K_EXISTS, 0);
};

DropSchemaContext.prototype.enterRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.enterDropSchema(this);
	}
};

DropSchemaContext.prototype.exitRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.exitDropSchema(this);
	}
};




SQLParser.DropSchemaContext = DropSchemaContext;

SQLParser.prototype.dropSchema = function() {

    var localctx = new DropSchemaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SQLParser.RULE_dropSchema);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 105;
        this.match(SQLParser.K_DROP);
        this.state = 106;
        _la = this._input.LA(1);
        if(!(_la===SQLParser.K_DATABASE || _la===SQLParser.K_SCHEMA)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 109;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SQLParser.K_IF) {
            this.state = 107;
            this.match(SQLParser.K_IF);
            this.state = 108;
            this.match(SQLParser.K_EXISTS);
        }

        this.state = 111;
        this.idName();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CreateSchemaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SQLParser.RULE_createSchema;
    return this;
}

CreateSchemaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CreateSchemaContext.prototype.constructor = CreateSchemaContext;

CreateSchemaContext.prototype.K_CREATE = function() {
    return this.getToken(SQLParser.K_CREATE, 0);
};

CreateSchemaContext.prototype.idName = function() {
    return this.getTypedRuleContext(IdNameContext,0);
};

CreateSchemaContext.prototype.K_DATABASE = function() {
    return this.getToken(SQLParser.K_DATABASE, 0);
};

CreateSchemaContext.prototype.K_SCHEMA = function() {
    return this.getToken(SQLParser.K_SCHEMA, 0);
};

CreateSchemaContext.prototype.K_IF = function() {
    return this.getToken(SQLParser.K_IF, 0);
};

CreateSchemaContext.prototype.K_NOT = function() {
    return this.getToken(SQLParser.K_NOT, 0);
};

CreateSchemaContext.prototype.K_EXISTS = function() {
    return this.getToken(SQLParser.K_EXISTS, 0);
};

CreateSchemaContext.prototype.createSpecification = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CreateSpecificationContext);
    } else {
        return this.getTypedRuleContext(CreateSpecificationContext,i);
    }
};

CreateSchemaContext.prototype.enterRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.enterCreateSchema(this);
	}
};

CreateSchemaContext.prototype.exitRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.exitCreateSchema(this);
	}
};




SQLParser.CreateSchemaContext = CreateSchemaContext;

SQLParser.prototype.createSchema = function() {

    var localctx = new CreateSchemaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SQLParser.RULE_createSchema);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.match(SQLParser.K_CREATE);
        this.state = 114;
        _la = this._input.LA(1);
        if(!(_la===SQLParser.K_DATABASE || _la===SQLParser.K_SCHEMA)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 118;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SQLParser.K_IF) {
            this.state = 115;
            this.match(SQLParser.K_IF);
            this.state = 116;
            this.match(SQLParser.K_NOT);
            this.state = 117;
            this.match(SQLParser.K_EXISTS);
        }

        this.state = 120;
        this.idName();
        this.state = 124;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SQLParser.K_DEFAULT) | (1 << SQLParser.K_CHARACTER) | (1 << SQLParser.K_COLLATE) | (1 << SQLParser.K_COMMENT))) !== 0)) {
            this.state = 121;
            this.createSpecification();
            this.state = 126;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CreateSpecificationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SQLParser.RULE_createSpecification;
    return this;
}

CreateSpecificationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CreateSpecificationContext.prototype.constructor = CreateSpecificationContext;

CreateSpecificationContext.prototype.K_CHARACTER = function() {
    return this.getToken(SQLParser.K_CHARACTER, 0);
};

CreateSpecificationContext.prototype.K_SET = function() {
    return this.getToken(SQLParser.K_SET, 0);
};

CreateSpecificationContext.prototype.charsetName = function() {
    return this.getTypedRuleContext(CharsetNameContext,0);
};

CreateSpecificationContext.prototype.K_DEFAULT = function() {
    return this.getToken(SQLParser.K_DEFAULT, 0);
};

CreateSpecificationContext.prototype.EQ = function() {
    return this.getToken(SQLParser.EQ, 0);
};

CreateSpecificationContext.prototype.K_COLLATE = function() {
    return this.getToken(SQLParser.K_COLLATE, 0);
};

CreateSpecificationContext.prototype.collateName = function() {
    return this.getTypedRuleContext(CollateNameContext,0);
};

CreateSpecificationContext.prototype.K_COMMENT = function() {
    return this.getToken(SQLParser.K_COMMENT, 0);
};

CreateSpecificationContext.prototype.tableComment = function() {
    return this.getTypedRuleContext(TableCommentContext,0);
};

CreateSpecificationContext.prototype.enterRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.enterCreateSpecification(this);
	}
};

CreateSpecificationContext.prototype.exitRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.exitCreateSpecification(this);
	}
};




SQLParser.CreateSpecificationContext = CreateSpecificationContext;

SQLParser.prototype.createSpecification = function() {

    var localctx = new CreateSpecificationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SQLParser.RULE_createSpecification);
    var _la = 0; // Token type
    try {
        this.state = 147;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 128;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===SQLParser.K_DEFAULT) {
                this.state = 127;
                this.match(SQLParser.K_DEFAULT);
            }

            this.state = 130;
            this.match(SQLParser.K_CHARACTER);
            this.state = 131;
            this.match(SQLParser.K_SET);
            this.state = 133;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===SQLParser.EQ) {
                this.state = 132;
                this.match(SQLParser.EQ);
            }

            this.state = 135;
            this.charsetName();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 137;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===SQLParser.K_DEFAULT) {
                this.state = 136;
                this.match(SQLParser.K_DEFAULT);
            }

            this.state = 139;
            this.match(SQLParser.K_COLLATE);
            this.state = 141;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===SQLParser.EQ) {
                this.state = 140;
                this.match(SQLParser.EQ);
            }

            this.state = 143;
            this.collateName();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 144;
            this.match(SQLParser.K_COMMENT);
            this.state = 145;
            this.match(SQLParser.EQ);
            this.state = 146;
            this.tableComment();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TableCommentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SQLParser.RULE_tableComment;
    return this;
}

TableCommentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TableCommentContext.prototype.constructor = TableCommentContext;

TableCommentContext.prototype.STRING = function() {
    return this.getToken(SQLParser.STRING, 0);
};

TableCommentContext.prototype.enterRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.enterTableComment(this);
	}
};

TableCommentContext.prototype.exitRule = function(listener) {
    if(listener instanceof SQLParserListener ) {
        listener.exitTableComment(this);
	}
};




SQLParser.TableCommentContext = TableCommentContext;

SQLParser.prototype.tableComment = function() {
